--- a/Doc/Tutorial/chapter_vcf.tex
+++ b/Doc/Tutorial/chapter_vcf.tex
@@ -535,7 +535,7 @@ Existing Filter's Classes:
 
 
 \subsection{Adding a filter}
-\noindent You can reuse this work by providing a filter class, rather than writing your own filter. For example, lets say I want to filter each site based on the quality of the site. I can create a class like this::
+\noindent You can reuse this work by providing a filter class, rather than writing your own filter. For example, lets say you want to filter each site based on the quality of the site. It is possible to create a class like this:
 \begin{verbatim}   
 import Bio.VCF.filters
 class SiteQuality(filters.Base):
@@ -577,8 +577,9 @@ import Bio.VCF
 \end{verbatim}
 
 
-\subsection{sample_filters.py script}
-\noindent \verb|Bio.VCF.sample_filters| are functions created to filter VCF files by haplotyp's sample. Usually we're interseted just in specified mutants, thats why it's very helpfull to get information to further analysis only about this variants.
+\subsection{sample\_filters.py script}
+\noindent \verb|Bio.VCF.sample_filters| are functions created to filter VCF files by haplotyp's sample.
+Usually we're interseted just in specified mutants, thats why it's very helpfull to get information to further analysis only about this variants.
 
 \noindent How to use it:
 
@@ -1059,17 +1060,17 @@ rs11812734	31713857	A G A A G G G G A G G G
 <Bio.VCF.phase.PhasedReader object at 0x7f38a3d3d518>
 \end{verbatim}
 
-\subsubsection{VCF.PhasedReader.get_specific_snp(rsID) - Getting SNP with user-given rsID}
+\subsubsection{VCF.PhasedReader.get\_specific\_snp(rsID) - Getting SNP with user-given rsID}
 
 \noindent rsID argument provides information on rsID of searched SNP.
 
-\noindent As the output user receives a _PhasedRecord object, which represents found SNP, or information that no SNP with given rsID was found.
+\noindent As the output user receives a \_PhasedRecord object, which represents found SNP, or information that no SNP with given rsID was found.
 
-\subsubsection{VCF.PhasedReader.get_snp_with_specific_id(rsID) - Getting SNP with user-given rsID}
+\subsubsection{VCF.PhasedReader.get\_snp\_with\_specific\_id(rsID) - Getting SNP with user-given rsID}
 
 \noindent rsID argument provides information on rsID of searched SNP.
 
-\noindent As the output user receives a _PhasedRecord object, which represents found SNP, or information that no SNP with given rsID was found.
+\noindent As the output user receives a \_PhasedRecord object, which represents found SNP, or information that no SNP with given rsID was found.
 
 \begin{verbatim}
 >>> from Bio.VCF import PhasedReader
@@ -1079,11 +1080,11 @@ rs11812734	31713857	A G A A G G G G A G G G
 
 \end{verbatim}
 
-\subsubsection{VCF.PhasedReader.get_snp_within_range(pos1, pos2) - Getting SNPs within user-given range of positions}
+\subsubsection{VCF.PhasedReader.get\_snp\_within\_range(pos1, pos2) - Getting SNPs within user-given range of positions}
 
 \noindent pos1 and pos2 arguments stand for a beginning and an ending position of the range (respectively) within which we are looking for SNPs.
 
-\noindent As the output user receives information on how many SNPs within given range were found and a list of _PhasedRecord objects, where each of them represents
+\noindent As the output user receives information on how many SNPs within given range were found and a list of \_PhasedRecord objects, where each of them represents
 one found SNP, or information that no SNP within given range was found.
 
 \begin{verbatim}
@@ -1098,13 +1099,13 @@ SNPs found: 3
 
 \end{verbatim}
 
-\subsection{VCF.PhasedReader.get_snp_with_specific_sample(haplotype, nucleotide) - Getting SNPs which contain user-given sample}
+\subsection{VCF.PhasedReader.get\_snp\_with\_specific\_sample(haplotype, nucleotide) - Getting SNPs which contain user-given sample}
 
 \noindent haplotype argument provides information on the sample's haplotype name.
 nucleotide argument provides the information on the sample's nucleotide ('A', 'T', 'G', 'C'). 
 
 \noindent As the output user receives information whether the haplotype provided in the arguments is included in the given file (if not, corresponding information 
-is being printed), how many SNPs containing searched sample were found and a list of _PhasedRecord objects, where each of them represents one found SNP. If no SNP 
+is being printed), how many SNPs containing searched sample were found and a list of \_PhasedRecord objects, where each of them represents one found SNP. If no SNP
 meeting the requirements provided in the arguments was found, corresponding information is being printed. 
 
 \begin{verbatim}
@@ -1117,16 +1118,16 @@ SNPs found: 7
 [<Bio.VCF.phase._PhasedRecord object at 0x7fe75042c7d0>, <Bio.VCF.phase._PhasedRecord object at 0x7fe75042c110>, <Bio.VCF.phase._PhasedRecord object at 0x7fe75042cb50>, <Bio.VCF.phase._PhasedRecord object at 0x7fe75042ce90>, <Bio.VCF.phase._PhasedRecord object at 0x7fe75042f550>, <Bio.VCF.phase._PhasedRecord object at 0x7fe75042f890>, <Bio.VCF.phase._PhasedRecord object at 0x7fe75042f210>]
 \end{verbatim}
 
-\subsection{VCF.PhasedReader.get_samples_from_specific_hap(haplotype) - Getting samples within user-given haplotype}
+\subsection{VCF.PhasedReader.get\_samples\_from\_specific\_hap(haplotype) - Getting samples within user-given haplotype}
 
 \noindent haplotype argument provides information on the name of the haplotype, within which user is searching for samples.
 
-\subsection{VCF.PhasedReader.get_snp_with_specific_sample(haplotype) - Getting SNPs with user-given details of the searched sample}
+\subsection{VCF.PhasedReader.get\_snp\_with\_specific\_sample(haplotype) - Getting SNPs with user-given details of the searched sample}
 
 \noindent haplotype argument provides information on the name of the haplotype, within which user is searching for samples.
 
 \noindent As the output user receives information whether the haplotype provided in the arguments is included in the given file (if not, corresponding information 
-is being printed), how many samples within searched haplotype were found and a list of _Sample objects, where each of them represents one found sample. Moreover, 
+is being printed), how many samples within searched haplotype were found and a list of \_Sample objects, where each of them represents one found sample. Moreover,
 information on the number of unresolved and not existing samples (within given haplotype), which are found during parsing a file, is being printed. If no sample 
 meeting the requirements provided in the arguments was found, corresponding information is also being printed.
 
@@ -1142,13 +1143,13 @@ SNPs found not existing: 0
 [<Bio.VCF.phase._Sample object at 0x7fe75042fbd0>, <Bio.VCF.phase._Sample object at 0x7fe750435490>, <Bio.VCF.phase._Sample object at 0x7fe75042fc50>, <Bio.VCF.phase._Sample object at 0x7fe7504354d0>, <Bio.VCF.phase._Sample object at 0x7fe75042fc90>, <Bio.VCF.phase._Sample object at 0x7fe750435510>, <Bio.VCF.phase._Sample object at 0x7fe75042fcd0>, <Bio.VCF.phase._Sample object at 0x7fe750435550>, <Bio.VCF.phase._Sample object at 0x7fe75042fd10>, <Bio.VCF.phase._Sample object at 0x7fe750435050>, <Bio.VCF.phase._Sample object at 0x7fe75042fd50>, <Bio.VCF.phase._Sample object at 0x7fe750435090>, <Bio.VCF.phase._Sample object at 0x7fe75042fd90>, <Bio.VCF.phase._Sample object at 0x7fe7504350d0>, <Bio.VCF.phase._Sample object at 0x7fe75042fdd0>, <Bio.VCF.phase._Sample object at 0x7fe750435110>, <Bio.VCF.phase._Sample object at 0x7fe75042fe10>, <Bio.VCF.phase._Sample object at 0x7fe750435150>, <Bio.VCF.phase._Sample object at 0x7fe75042fe50>, <Bio.VCF.phase._Sample object at 0x7fe750435190>, <Bio.VCF.phase._Sample object at 0x7fe750435590>, <Bio.VCF.phase._Sample object at 0x7fe7504351d0>, <Bio.VCF.phase._Sample object at 0x7fe7504355d0>, <Bio.VCF.phase._Sample object at 0x7fe750435610>, <Bio.VCF.phase._Sample object at 0x7fe750435650>, <Bio.VCF.phase._Sample object at 0x7fe750435690>, <Bio.VCF.phase._Sample object at 0x7fe7504356d0>, <Bio.VCF.phase._Sample object at 0x7fe750435710>, <Bio.VCF.phase._Sample object at 0x7fe750435750>, <Bio.VCF.phase._Sample object at 0x7fe750435790>, <Bio.VCF.phase._Sample object at 0x7fe7504357d0>, <Bio.VCF.phase._Sample object at 0x7fe750435810>]
 \end{verbatim}
 
-\subsection{VCF.PhasedReader.get_specific_sample(rsID, haplotype) - Getting a sample with user-given details}
+\subsection{VCF.PhasedReader.get\_specific\_sample(rsID, haplotype) - Getting a sample with user-given details}
 
 \noindent rsID argument provides information on the rsID of SNP, within which user is searching for a specific sample.
 haplotype argument provides information on the name of the haplotype, within which user is searching for a specific sample.
 
 \noindent As the output user receives information whether the haplotype provided in the arguments is included in the given file (if not, corresponding information 
-is being printed) and a _Sample object, which represents found sample. Moreover, if searched sample turns out to be unresolved or not existing, corresponding 
+is being printed) and a \_Sample object, which represents found sample. Moreover, if searched sample turns out to be unresolved or not existing, corresponding
 information is being printed. If no sample meeting the requirements provided in the arguments was found, corresponding information is also being printed.
 
 \begin{verbatim}
@@ -1158,4 +1159,4 @@ information is being printed. If no sample meeting the requirements provided in 
 Searched haplotype is included in the given file...
 <Bio.VCF.phase._Sample object at 0x7f8bb5d4c7d0>
 
-/end{verbatim}
+\end{verbatim}
