drobne zmiany w dokumentacji

--- a/Doc/Tutorial/chapter_vcf.tex
+++ b/Doc/Tutorial/chapter_vcf.tex
@@ -571,7 +571,7 @@ class Filter:
 \begin{verbatim}
 >>>from Bio.VCF import filters_new
 >>>base=filters_new.Base('./Tests/VCF/1kg.sites.vcf')
->>>base.filtering({'POS':[106544, 99080]}, SNP:[]})
+>>>base.filtering({'POS':[106544, 99080], SNP:[]})
 \end{verbatim}
 
 \noindent If you have any problem with filters_new.py, please contast us. 
