--- a/Doc/Tutorial/chapter_vcf.tex
+++ b/Doc/Tutorial/chapter_vcf.tex
@@ -567,7 +567,7 @@ class Filter:
 \noindent To use this filter firstly you have to import \verb|filters_new.py| from its directory. 
 \noindent Than you have to create Base object with VCF file which you want to filter and optionaly name of output file. After that you must use \verb|filtering| funcion on base object with dict of filter and list of their parameters.
 
-\noindent You have several options for filtering: by  Site Quality \verb|Bio.VCF.filters_new.Filter.SQ|, Variant Genotype Quality \verb|Bio.VCF.filters_new.Filter.VGQ|, Depth per sample \verb|Bio.VCF.filters_new.Filter.DPS|, Avg Depth Per Sample \verb|Bio.VCF.filters_new.Filter.APS|, Snp Only \verb|Bio.VCF.filters_new.Filter.SNP|, chromosomes \verb|Bio.VCF.filters_new.Filter.CHR|, position \verb|Bio.VCF.filters_new.Filter.POS|.
+\noindent You have several options for filtering: by  Site Quality \verb|Bio.VCF.filters_new.Filter.SQ|, Variant Genotype Quality \verb|Bio.VCF.filters_new.Filter.VGQ|, Depth per sample \verb|Bio.VCF.filters_new.Filter.DPS|, Avg Depth Per Sample \verb|Bio.VCF.filters_new.Filter.APS|, Snp Only \verb|Bio.VCF.filters_new.Filter.SNP|, chromosomes \verb|Bio.VCF.filters_new.Filter.CHR|, position \verb|Bio.VCF.filters_new.Filter.POS|.\\
 
 
 \noindent Example of using filters from filters\_new.py file:
@@ -581,7 +581,7 @@ class Filter:
 
 \subsection{sample\_filters.py script}
 \noindent \verb|Bio.VCF.sample_filters| are functions created to filter VCF files by haplotyp's sample.
-Usually we're interseted just in specified mutants, thats why it's very helpfull to get information to further analysis only about this variants.
+Usually we're interseted just in specified mutants, thats why it's very helpfull to get information to further analysis only about this variants.\\
 
 \noindent How to use it:
 
@@ -654,7 +654,7 @@ sections provide brief description of methods searching through both databases a
 \verb|Bio.VCf.databases| module supports current database's version which includes analysis of 1135 genomes achieved
 during the first phase of the project.
 Searching through the database can be based on strain's name, ec number, eco type, as well as on information of its
-origin - such as country, longitude or latitude.
+origin - such as country, longitude or latitude.\\
 
 
 \noindent Below there is a brief description of \verb|thousandgenomes()| methods:
@@ -671,28 +671,28 @@ origin - such as country, longitude or latitude.
     "CAN", "UKR", "AZE", "GEO", "ARM", "MAR", "CRO", "BUL", "GRC", "SVK", "ROU", "UZB", "SRB", "CHN", "IRN", "LBN", "MAR",
     "AFG".\\
 \vspace{5mm}
-    Longitude and latitude should be provided as an interval - longitude = (int1, int2), latitude = (int1,int2).
+    Longitude and latitude should be provided as an interval - longitude = (int1, int2), latitude = (int1,int2). \\
     Strain names, eco types and ec numbers are unique, country, while longitude and latitude enables users to seek for
     multiple VCF files corresponding to selected features.
-    Method returns VCF.Reader object of selected VCF file stream from 1001 Genomes Database or a list of
-    such VCF.Reader objects.
+    Method returns \verb|VCF.Reader| object of selected VCF file stream from 1001 Genomes Database or a list of
+    such \verb|VCF.Reader| objects.
 
 \item[\texttt{download(vcf\_reader, path\_filename)}] \
 
-    Downloads VCF file corresponding to stream on which provided VCF.Reader object is initialized.
-    VCF.Reader object as well as download directory and filename are required.
+    Downloads VCF file corresponding to stream on which provided \verb|VCF.Reader| object is initialized.
+    \verb|VCF.Reader| object as well as download directory and filename are required.
 
 \item[\texttt{merge(vcf\_list,vcf\_template,vcf\_name)}] \
 
-    Method creates VCF.Reader object from provided list of VCF.Reader objects.
-    It is based on VCF.Writer class and uses Writer.write\_record() method - new sorted VCF file is saved to
+    Method creates \verb|VCF.Reader| object from provided list of \verb|VCF.Reader| objects.
+    It is based on \verb|VCF.Writer| class and uses \verb|Writer.write_record()| method - new sorted VCF file is saved to
     bio-VCF/Bio/VCF directory.
-    Template VCF.Reader object and name for new VCF file are required.
+    Template \verb|VCF.Reader| object and name for new VCF file are required.
 
 \end{description}
 
-\noindent Let's try some functionality of the module:
-\vspace{5mm}
+\noindent Let's try some functionality of the module:\\
+
 \noindent Suppose we want to analyse structural variants identified in "CYR" strain of Arabidopsis Thaliana. First of all,
 we need to find VCF file corresponding to our selected strain. To do so, we can simply type:
 
@@ -706,7 +706,7 @@ we need to find VCF file corresponding to our selected strain. To do so, we can 
 \end{verbatim}
 
 
-\noindent Now, we can continue analysis for example by running methods from VCF.Reader class.
+\noindent Now, we can continue analysis for example by running methods from \verb|VCF.Reader| class.
 
 
 \noindent We may also be interested in retrieving all structural variants that are identified in strains occupying a particular
@@ -722,7 +722,7 @@ method can manage this:
 \end{verbatim}
 
 
-\noindent Method returned two VCF.Reader objects which we can analyse further or simply download to local disc:
+\noindent Method returned two \verb|VCF.Reader| objects which we can analyse further or simply download to local disc:
 
 
 \begin{verbatim}
@@ -749,7 +749,7 @@ method can manage this:
     Chromosome must be chosen from existing chromosomes in given organism. Leaving \verb|chromosome=None| will cause loading VCF file
     containing all the chromosomes (but not every organism has this file).
     
-    Method returns VCF.Reader object of selected VCF file stream from dbSNP.
+    Method returns \verb|VCF.Reader| object of selected VCF file stream from dbSNP.
     
     \item[\texttt{check\_VCF()}] \
     
@@ -758,8 +758,8 @@ method can manage this:
 
 \end{description}
 
-\noindent Let's try some functionality of the module:
-\vspace{5mm}
+\noindent Let's try some functionality of the module:\\
+
 \noindent Suppose we want to analyse SNPs found in chromosome 2R in fruitfly. We check \verb|organisms.txt| where we can find identifier 
 fruitfly\_7227.
 
@@ -770,8 +770,8 @@ fruitfly\_7227.
 <Bio.VCF.parser.Reader object at 0x7f1d813f14d0>
 \end{verbatim}
 
-\noindent Now we can continue our analysis using methods proposed in VCF.Reader class.
-\vspace{5mm}
+\noindent Now we can continue our analysis using methods proposed in \verb|VCF.Reader| class.\\
+
 \noindent We can also want to analyse all SNPs found for flycatcher:
 
 \begin{verbatim}
@@ -882,7 +882,7 @@ compressed=True)
 
 \end{verbatim}
 
-\noindent Haplotypes included in the file are stored in the haplotypes list, as \verb|_Haplotype objects|:
+\noindent Haplotypes included in the file are stored in the haplotypes list, as \verb|_Haplotype| objects:
 
 \begin{verbatim}
 >>> phase_reader.haplotypes
@@ -991,7 +991,7 @@ Record(rs11250575 at 199448: T, C, C, C, C, C, C, C, C, C, C, C)
 (True, False)
 \end{verbatim}
 
-\noindent There is also the is\verb|_not_matching_snp| argument, but it is further discussed in the \verb|VCF.PhasedReader.fetch()|
+\noindent There is also the \verb|is_not_matching_snp| argument, but it is further discussed in the \verb|VCF.PhasedReader.fetch()|
 section.
 
 \subsection{Writing phasing files with VCF.PhasedWriter}
@@ -1040,7 +1040,7 @@ It takes the same arguments as \verb|VCF.Reader| when it is created (see in the 
 \\
 
 \noindent Suppose you wanted to filter the SNPs in the phasing files with the VCF file with some records for the same chromosome.
-First you need to create the \verb|PhasedReader| object, and then fetch it by supplying the same arguments as you would when creating the VCF.Reader object.
+First you need to create the \verb|PhasedReader| object, and then fetch it by supplying the same arguments as you would when creating the \verb|VCF.Reader| object.
 
 \begin{verbatim}
 >>> phase_reader = PhasedReader('Tests/VCF/hapmap3_r2_b36_fwd.consensus.qc.poly.chr10_yri.D.phased.gz',
